--- a/workflow/notebooks/download_data.ipynb
+++ b/workflow/notebooks/download_data.ipynb
@@ -10,27 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "da785d38-4665-4f51-9b2f-7b1813545a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T16:42:17.043598Z",
-     "iopub.status.busy": "2023-10-19T16:42:17.043027Z",
-     "iopub.status.idle": "2023-10-19T16:42:17.079509Z",
-     "shell.execute_reply": "2023-10-19T16:42:17.077570Z",
-     "shell.execute_reply.started": "2023-10-19T16:42:17.043546Z"
+     "iopub.execute_input": "2023-10-20T17:08:01.493287Z",
+     "iopub.status.busy": "2023-10-20T17:08:01.492763Z",
+     "iopub.status.idle": "2023-10-20T17:08:01.542669Z",
+     "shell.execute_reply": "2023-10-20T17:08:01.540817Z",
+     "shell.execute_reply.started": "2023-10-20T17:08:01.493238Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -38,15 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "592d198d-00c4-45b5-a8f7-599538bfaf95",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T16:42:17.287658Z",
-     "iopub.status.busy": "2023-10-19T16:42:17.287153Z",
-     "iopub.status.idle": "2023-10-19T16:42:17.320800Z",
-     "shell.execute_reply": "2023-10-19T16:42:17.319028Z",
-     "shell.execute_reply.started": "2023-10-19T16:42:17.287611Z"
+     "iopub.execute_input": "2023-10-20T17:08:01.738937Z",
+     "iopub.status.busy": "2023-10-20T17:08:01.738449Z",
+     "iopub.status.idle": "2023-10-20T17:08:03.544848Z",
+     "shell.execute_reply": "2023-10-20T17:08:03.543718Z",
+     "shell.execute_reply.started": "2023-10-20T17:08:01.738892Z"
     }
    },
    "outputs": [],
@@ -64,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "740ce41b-8103-4a0a-b2d6-797e0f6b736b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T16:42:20.034580Z",
-     "iopub.status.busy": "2023-10-19T16:42:20.033976Z",
-     "iopub.status.idle": "2023-10-19T16:42:20.068324Z",
-     "shell.execute_reply": "2023-10-19T16:42:20.066416Z",
-     "shell.execute_reply.started": "2023-10-19T16:42:20.034530Z"
+     "iopub.execute_input": "2023-10-20T17:08:03.546438Z",
+     "iopub.status.busy": "2023-10-20T17:08:03.546120Z",
+     "iopub.status.idle": "2023-10-20T17:08:03.563363Z",
+     "shell.execute_reply": "2023-10-20T17:08:03.562290Z",
+     "shell.execute_reply.started": "2023-10-20T17:08:03.546417Z"
     }
    },
    "outputs": [],
@@ -84,7 +75,7 @@
     "# a dict for all of these\n",
     "# But in the future we can have a .csv\n",
     "# that maps STATE_FIPS to STATE_ABBR\n",
-    "wcard_dict = {x: CONFIG[x[1:-1]][0] for x in URL_WILDCARDS}\n"
+    "wcard_dict = {x: CONFIG[x[1:-1]][0] for x in URL_WILDCARDS}"
    ]
   },
   {
@@ -97,15 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "d66177a7-0497-41bb-b719-28b63af8e5ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T16:42:51.636615Z",
-     "iopub.status.busy": "2023-10-19T16:42:51.636081Z",
-     "iopub.status.idle": "2023-10-19T16:42:51.669593Z",
-     "shell.execute_reply": "2023-10-19T16:42:51.667758Z",
-     "shell.execute_reply.started": "2023-10-19T16:42:51.636568Z"
+     "iopub.execute_input": "2023-10-20T17:19:40.916573Z",
+     "iopub.status.busy": "2023-10-20T17:19:40.916011Z",
+     "iopub.status.idle": "2023-10-20T17:19:41.642602Z",
+     "shell.execute_reply": "2023-10-20T17:19:41.640986Z",
+     "shell.execute_reply.started": "2023-10-20T17:19:40.916524Z"
     }
    },
    "outputs": [],
@@ -118,15 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "a8b0ad8a-7312-45ad-8134-4fdcf71c388b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T16:42:52.610481Z",
-     "iopub.status.busy": "2023-10-19T16:42:52.609951Z",
-     "iopub.status.idle": "2023-10-19T16:43:47.158924Z",
-     "shell.execute_reply": "2023-10-19T16:43:47.158072Z",
-     "shell.execute_reply.started": "2023-10-19T16:42:52.610436Z"
+     "iopub.execute_input": "2023-10-20T17:09:06.502531Z",
+     "iopub.status.busy": "2023-10-20T17:09:06.502003Z",
+     "iopub.status.idle": "2023-10-20T17:09:07.738882Z",
+     "shell.execute_reply": "2023-10-20T17:09:07.737110Z",
+     "shell.execute_reply.started": "2023-10-20T17:09:06.502483Z"
     }
    },
    "outputs": [
@@ -134,15 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloaded from: https://hazards.fema.gov/nfhlv2/output/County/34007C_20160816.zip\n",
-      "Downloaded from: https://coast.noaa.gov/htdata/SocioEconomic/SoVI2010/SoVI_2010_NJ.zip\n",
-      "Downloaded from: https://www2.census.gov/geo/tiger/TIGER2022/TRACT/tl_2022_34_tract.zip\n",
-      "Downloaded from: https://www2.census.gov/geo/tiger/TIGER2022/BG/tl_2022_34_bg.zip\n",
-      "Downloaded from: https://www2.census.gov/geo/tiger/TIGER2022/TABBLOCK20/tl_2022_34_tabblock20.zip\n",
-      "Downloaded from: https://static-data-screeningtool.geoplatform.gov/data-versions/1.0/data/score/downloadable/1.0-communities.csv\n",
-      "Downloaded from: https://www.hudexchange.info/sites/onecpd/assets/File/ACS_2015_lowmod_blockgroup_all.xlsx\n",
-      "Downloaded from: https://www2.census.gov/geo/tiger/TIGER2022/COUNTY/tl_2022_us_county.zip\n",
-      "Downloaded from: https://www2.census.gov/geo/tiger/TIGER2022/ZCTA520/tl_2022_us_zcta520.zip\n"
+      "Downloaded from: https://zenodo.org/api/records/10027236/files-archive?access_token=tOm4oKjP52p4H1C0xed7nBT2zydbgY3t7dq9gtK6VRR74I9BETGpQWTjvtIv\n"
      ]
     }
    ],
@@ -153,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a244047-f3dc-4348-b36c-d7778436a8dd",
+   "id": "1ec5397d-3494-4063-9d99-4dcc0a9d3939",
    "metadata": {},
    "outputs": [],
    "source": []
