progressing to data processing stage, other clean-ups/improvements

--- a/workflow/notebooks/download_data.ipynb
+++ b/workflow/notebooks/download_data.ipynb
@@ -14,11 +14,11 @@
    "id": "da785d38-4665-4f51-9b2f-7b1813545a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T17:08:01.493287Z",
-     "iopub.status.busy": "2023-10-20T17:08:01.492763Z",
-     "iopub.status.idle": "2023-10-20T17:08:01.542669Z",
-     "shell.execute_reply": "2023-10-20T17:08:01.540817Z",
-     "shell.execute_reply.started": "2023-10-20T17:08:01.493238Z"
+     "iopub.execute_input": "2023-10-20T21:25:17.421199Z",
+     "iopub.status.busy": "2023-10-20T21:25:17.420711Z",
+     "iopub.status.idle": "2023-10-20T21:25:17.462127Z",
+     "shell.execute_reply": "2023-10-20T21:25:17.460668Z",
+     "shell.execute_reply.started": "2023-10-20T21:25:17.421151Z"
     }
    },
    "outputs": [],
@@ -33,11 +33,11 @@
    "id": "592d198d-00c4-45b5-a8f7-599538bfaf95",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T17:08:01.738937Z",
-     "iopub.status.busy": "2023-10-20T17:08:01.738449Z",
-     "iopub.status.idle": "2023-10-20T17:08:03.544848Z",
-     "shell.execute_reply": "2023-10-20T17:08:03.543718Z",
-     "shell.execute_reply.started": "2023-10-20T17:08:01.738892Z"
+     "iopub.execute_input": "2023-10-20T21:25:17.802826Z",
+     "iopub.status.busy": "2023-10-20T21:25:17.802333Z",
+     "iopub.status.idle": "2023-10-20T21:25:19.472299Z",
+     "shell.execute_reply": "2023-10-20T21:25:19.471108Z",
+     "shell.execute_reply.started": "2023-10-20T21:25:17.802779Z"
     }
    },
    "outputs": [],
@@ -59,11 +59,11 @@
    "id": "740ce41b-8103-4a0a-b2d6-797e0f6b736b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T17:08:03.546438Z",
-     "iopub.status.busy": "2023-10-20T17:08:03.546120Z",
-     "iopub.status.idle": "2023-10-20T17:08:03.563363Z",
-     "shell.execute_reply": "2023-10-20T17:08:03.562290Z",
-     "shell.execute_reply.started": "2023-10-20T17:08:03.546417Z"
+     "iopub.execute_input": "2023-10-20T21:25:19.473777Z",
+     "iopub.status.busy": "2023-10-20T21:25:19.473465Z",
+     "iopub.status.idle": "2023-10-20T21:25:19.490222Z",
+     "shell.execute_reply": "2023-10-20T21:25:19.489149Z",
+     "shell.execute_reply.started": "2023-10-20T21:25:19.473757Z"
     }
    },
    "outputs": [],
@@ -88,15 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "d66177a7-0497-41bb-b719-28b63af8e5ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T17:19:40.916573Z",
-     "iopub.status.busy": "2023-10-20T17:19:40.916011Z",
-     "iopub.status.idle": "2023-10-20T17:19:41.642602Z",
-     "shell.execute_reply": "2023-10-20T17:19:41.640986Z",
-     "shell.execute_reply.started": "2023-10-20T17:19:40.916524Z"
+     "iopub.execute_input": "2023-10-20T21:25:21.485952Z",
+     "iopub.status.busy": "2023-10-20T21:25:21.485644Z",
+     "iopub.status.idle": "2023-10-20T21:25:21.514552Z",
+     "shell.execute_reply": "2023-10-20T21:25:21.512695Z",
+     "shell.execute_reply.started": "2023-10-20T21:25:21.485926Z"
     }
    },
    "outputs": [],
@@ -109,15 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a8b0ad8a-7312-45ad-8134-4fdcf71c388b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T17:09:06.502531Z",
-     "iopub.status.busy": "2023-10-20T17:09:06.502003Z",
-     "iopub.status.idle": "2023-10-20T17:09:07.738882Z",
-     "shell.execute_reply": "2023-10-20T17:09:07.737110Z",
-     "shell.execute_reply.started": "2023-10-20T17:09:06.502483Z"
+     "iopub.execute_input": "2023-10-20T21:25:22.154867Z",
+     "iopub.status.busy": "2023-10-20T21:25:22.154349Z",
+     "iopub.status.idle": "2023-10-20T21:25:22.291370Z",
+     "shell.execute_reply": "2023-10-20T21:25:22.289725Z",
+     "shell.execute_reply.started": "2023-10-20T21:25:22.154818Z"
     }
    },
    "outputs": [
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloaded from: https://zenodo.org/api/records/10027236/files-archive?access_token=tOm4oKjP52p4H1C0xed7nBT2zydbgY3t7dq9gtK6VRR74I9BETGpQWTjvtIv\n"
+      "Downloaded from: https://services3.arcgis.com/JGF6qCAQFbROcocK/arcgis/rest/services/CamdenCountyMunicipalLayer/FeatureServer/0/query?f=geojson&where=(NAMELSAD%20IN%20(%27Gloucester%20City%20city%27))&outFields=*\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec5397d-3494-4063-9d99-4dcc0a9d3939",
+   "id": "23853146-ebf5-4531-81b4-039e467b949b",
    "metadata": {},
    "outputs": [],
    "source": []
